Fix preferences page
Remove unsupported options (such as templates)
Fixed extra margin in the colour preview divs

--- a/htdocs/css/Default/Default.css
+++ b/htdocs/css/Default/Default.css
@@ -448,7 +448,7 @@ table.csForces th.header {
 	height:150px;
 	width:170px;
 	display: inline-block; 
-	margin:0 15px;
+	margin:0;
 }
 .preview #preview {
 	height:137px;
